add service workers and disable client scripsts

--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
 		"test": "npm run build"
 	},
 	"phenomic": {
-		"CNAME": false
+		"CNAME": false,
+		"offline": true,
+		"clientScripts": false
 	},
 	"#babel": "webpack-(development|production) are useful for webpack 2, otherwise use development|production",
 	"babel": {
