--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
 	"devDependencies": {
 		"@gov.au/footer": "^0.1.0",
 		"@gov.au/header": "^1.0.0",
+		"autoprefixer": "^7.0.1",
 		"babel-cli": "^6.14.0",
 		"babel-core": "^6.14.0",
 		"babel-eslint": "^7.0.0",
@@ -152,6 +153,12 @@
 		"node-sass": "^4.5.2",
 		"sass-loader": "^6.0.3"
 	},
+	"browserslist": [
+		"last 2 versions",
+		"ie 8",
+		"ie 9",
+		"ie 10"
+	],
 	"pancake": {
 		"auto-save": false,
 		"plugins": true,
@@ -159,6 +166,12 @@
 		"css": {
 			"minified": true,
 			"modules": false,
+			"browsers": [
+				"last 2 versions",
+				"ie 8",
+				"ie 9",
+				"ie 10"
+			],
 			"location": false,
 			"name": false
 		},
