--- a/package.json
+++ b/package.json
@@ -118,6 +118,7 @@
 		"postcss-cssnext": "^2.4.0",
 		"postcss-loader": "^1.3.3",
 		"postcss-reporter": "^1.3.0",
+		"prop-types": "^15.5.8",
 		"raw-loader": "^0.5.1",
 		"react": "^15.0.0",
 		"react-dom": "^15.0.0",
