--- a/circle.yml
+++ b/circle.yml
@@ -17,10 +17,13 @@ dependencies:
     - sudo dpkg -i cf-cli_amd64.deb # installing it
     - cf -v                         # logging what we got
     - sudo apt-get install tree     # install tree (soo much nicer)
+    - sudo npm install forever
   override:
     - yarn           # install dependencies
     # - yarn bootstrap # running bootstrap script
     - yarn build     # running build script
+    - forever start dynamic/index.js
+    - forever list
   cache_directories:
     - ~/.cache/yarn  # yarn needs this
 
