--- a/package.json
+++ b/package.json
@@ -154,7 +154,8 @@
 		}
 	],
 	"dependencies": {
-		"@gov.au/pancake-sass": "^1.1.0"
+		"@gov.au/pancake-sass": "^1.1.0",
+		"express": "^4.15.2"
 	},
 	"browserslist": [
 		"last 2 versions",
