--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
 		"start": "phenomic start",
 		"build": "phenomic build",
 		"pretest": "npm run lint",
-		"test": "npm run build"
+		"test": "echo \"No tests yet\""
 	},
 	"phenomic": {
 		"CNAME": false,
