--- a/circle.yml
+++ b/circle.yml
@@ -7,9 +7,9 @@ machine:
   environment:
     PATH: "${PATH}:${HOME}/${CIRCLE_PROJECT_REPONAME}/node_modules/.bin" # need this for yarn
 
-general:
-  artifacts:
-    - $CIRCLE_ARTIFACTS # telling circle to do it’s job / to enable artifacts
+# general:
+#   artifacts:
+#     - $CIRCLE_ARTIFACTS # telling circle to do it’s job / to enable artifacts
 
 dependencies:
   pre:
@@ -18,22 +18,20 @@ dependencies:
     - cf -v                         # logging what we got
     - sudo apt-get install tree     # install tree (soo much nicer)
   override:
-    - yarn global add forever
+    # - yarn global add forever
     - yarn           # install dependencies
     # - yarn bootstrap # running bootstrap script
     - yarn build     # running build script
-    - forever start dynamic/index.js
-    - forever list
   cache_directories:
     - ~/.cache/yarn  # yarn needs this
 
 test:
   post:
-    - find . -name "node_modules" -exec rm -rf '{}' + # removing all node_modules/ folder
-    - find . -name "lib" -exec rm -rf '{}' +          # removing all lib/ folders
-    - find . -name "src" -exec rm -rf '{}' +          # removing all src/ folder
-    - tree -C                                         # let’s log what we got now
-    - cp -r dist/* $CIRCLE_ARTIFACTS/                 # moving all remaining files to $CIRCLE_ARTIFACTS
+    # - find . -name "node_modules" -exec rm -rf '{}' + # removing all node_modules/ folder
+    # - find . -name "lib" -exec rm -rf '{}' +          # removing all lib/ folders
+    # - find . -name "src" -exec rm -rf '{}' +          # removing all src/ folder
+    # - tree -C                                         # let’s log what we got now
+    # - cp -r dist/* $CIRCLE_ARTIFACTS/                 # moving all remaining files to $CIRCLE_ARTIFACTS
 
 deployment:
   development:
