--- a/circle.yml
+++ b/circle.yml
@@ -39,10 +39,10 @@ deployment:
     commands:
       - cf login -a https://api.system.platform.digital.gov.au -o $CF_ORG_PROD -s $CF_SPACE_PROD -u $CF_USER_PROD -p $CF_PASSWORD_PROD
       - cf target -o $CF_ORG_PROD -s $CF_SPACE_PROD
-      - cf push -f manifest.yml
+      - cf push -f production-manifest.yml
   production:
     branch: develop # only develop branch
     commands:
       - cf login -a https://api.system.staging.digital.gov.au -o $CF_ORG_STAGING -s $CF_SPACE_STAGING -u $CF_USER_STAGING -p $CF_PASSWORD_STAGING
       - cf target -o $CF_ORG_STAGING -s $CF_SPACE_STAGING
-      - cf push -f manifest.yml
+      - cf push -f production-manifest.yml
