--- a/manifest.yml
+++ b/manifest.yml
@@ -1,7 +1,9 @@
 ---
 
-buildpack: https://github.com/cloudfoundry/nodejs-buildpack.git
-memory: 256M
-instances: 1
-path: ./
-command: node server/index.js
+applications:
+- name: service-manual
+  buildpack: https://github.com/cloudfoundry/nodejs-buildpack.git
+  memory: 256M
+  instances: 1
+  path: ./
+  command: node server/index.js
