--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"private": true,
 	"name": "service-manual",
-	"homepage": "http://service-manual.apps.staging.digital.gov.au/",
+	"homepage": "https://service-manual.apps.staging.digital.gov.au/",
 	"twitter": "DTA",
 	"repository": "https://github.com/govau/service-manual",
 	"scripts": {
