add new section page layout

--- a/package.json
+++ b/package.json
@@ -136,6 +136,7 @@
 		"react-hot-loader": "^3.0.0-beta",
 		"react-redux": "^4.0.0",
 		"react-router": "^2.3.0",
+		"react-sticky": "^6.0.1",
 		"react-svg-inline": "^1.1.0",
 		"react-topbar-progress-indicator": "^1.0.0",
 		"redux": "^3.0.0",
