--- a/package.json
+++ b/package.json
@@ -98,6 +98,7 @@
 	"devDependencies": {
 		"@gov.au/body": "^0.1.1",
 		"@gov.au/buttons": "^0.3.0",
+		"@gov.au/core": "^0.1.2",
 		"@gov.au/footer": "^0.1.0",
 		"@gov.au/grid-12": "^0.1.0",
 		"@gov.au/header": "^1.0.0",
