--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
 		"test": "jest"
 	},
 	"phenomic": {
+		"source": "content",
+		"destination": "dist",
+		"assets": "assets",
+		"clientScripts": false,
 		"CNAME": false,
-		"offline": true,
-		"clientScripts": false
+		"offline": true
 	},
 	"jest": {
 		"testRegex": "\\.test.js$",
@@ -169,7 +172,8 @@
 	],
 	"dependencies": {
 		"@gov.au/pancake-sass": "^1.1.0",
-		"express": "^4.15.2"
+		"express": "^4.15.2",
+		"remark-external-links": "^1.0.1"
 	},
 	"browserslist": [
 		"last 2 versions",
