first setup with cuttlebelle
Signed-off-by: Dominik Wilkowski <Hi@Dominik-Wilkowski.com>

--- a/.gitignore
+++ b/.gitignore
@@ -13,8 +13,11 @@ validation-status.json
 npm-debug.log
 *.log
 
-# phenomic build
-dist
+# build
+site/
 
 # uikit
-src/uikit/
+src/sass/uikit/
+
+# artifacts
+*.css
