--- a/manifest.yml
+++ b/manifest.yml
@@ -4,5 +4,7 @@ applications:
   buildpack: https://github.com/cloudfoundry/nodejs-buildpack.git
   memory: 256M
   instances: 1
+  env:
+    NODE_MODULES_CACHE: false
   path: ./
   command: node server/index.js
