--- a/circle.yml
+++ b/circle.yml
@@ -28,11 +28,11 @@ dependencies:
 
 test:
   post:
-    - find . -name "node_modules" -exec rm -rf '{}' + # removing all node_modules/ folder
-    - find . -name "lib" -exec rm -rf '{}' +          # removing all lib/ folders
-    - find . -name "src" -exec rm -rf '{}' +          # removing all src/ folder
-    - tree -C                                         # let’s log what we got now
-    - cp -r site/* $CIRCLE_ARTIFACTS/                 # moving all remaining files to $CIRCLE_ARTIFACTS
+    # - find . -name "node_modules" -exec rm -rf '{}' + # removing all node_modules/ folder
+    # - find . -name "lib" -exec rm -rf '{}' +          # removing all lib/ folders
+    # - find . -name "src" -exec rm -rf '{}' +          # removing all src/ folder
+    # - tree -C                                         # let’s log what we got now
+    # - cp -r site/* $CIRCLE_ARTIFACTS/                 # moving all remaining files to $CIRCLE_ARTIFACTS
 
 deployment:
   development:
