remove yarn.lock file so cf doesn’t loose it’s s$#%
Signed-off-by: Dominik Wilkowski <Hi@Dominik-Wilkowski.com>

--- a/circle.yml
+++ b/circle.yml
@@ -28,6 +28,7 @@ dependencies:
 
 test:
   post:
+    - rm yarn.lock                                    # remove yarn.lock file so cf doesn’t freak out...
     # - find . -name "node_modules" -exec rm -rf '{}' + # removing all node_modules/ folder
     # - find . -name "lib" -exec rm -rf '{}' +          # removing all lib/ folders
     # - find . -name "src" -exec rm -rf '{}' +          # removing all src/ folder
