--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
 		"build:pages": "cuttlebelle",
 		"build:sass": "node-sass --output-style compressed -o assets/css src/sass/site.scss",
 		"build:autoprefixer": "postcss -u autoprefixer -r assets/css/*",
+		"build:js": "mkdirp assets/js/ && concat-cli -f src/js/**/*.js -o assets/js/site.js",
 		"build": "npm-run-all --parallel build:*",
 		"watch:pages": "cuttlebelle -w",
-		"watch:css": "onchange 'src/sass/*.scss' -- npm run build:sass && npm run build:autoprefixer",
+		"watch:css": "onchange 'src/sass/**/*.scss' -- npm run build:sass && npm run build:autoprefixer",
+		"watch:js": "onchange 'src/js/**/*.js' -- npm run build:js",
 		"watch": "npm-run-all --parallel watch:*",
 		"test": "echo \"Error: no test specified\" && exit 0"
 	},
@@ -27,6 +29,7 @@
 		}
 	],
 	"dependencies": {
+		"@gov.au/animate": "^0.1.3",
 		"@gov.au/body": "^0.1.1",
 		"@gov.au/footer": "^0.2.0",
 		"@gov.au/header": "^1.1.0",
@@ -37,7 +40,9 @@
 	},
 	"devDependencies": {
 		"autoprefixer": "^7.1.1",
+		"concat-cli": "^4.0.0",
 		"cuttlebelle": "^1.0.0-alpha.14",
+		"mkdirp": "^0.5.1",
 		"node-sass": "^4.5.3",
 		"npm-run-all": "^4.0.2",
 		"onchange": "^3.2.1",
@@ -79,8 +84,8 @@
 		},
 		"js": {
 			"modules": false,
-			"location": false,
-			"name": false
+			"location": "src/js/000-uikit/",
+			"name": "uikit.js"
 		}
 	}
 }
