--- a/content/user-research/synthesising-user-research/index.yml
+++ b/content/user-research/synthesising-user-research/index.yml
@@ -1,6 +1,15 @@
 title: Synthesising user research
 layout: layout/topic
-theme: light
+theme: blue
 partials:
   - /_shared/header
+  - intro             # Synthesizing user research
+  - sections
+  - section1          # Meeting the Digital Service Standard
+  - textblock1
+  - section2          # Plan analysis sessions
+  - textblock2
+  - quote1            # The good boy quote
+  - section3          # Extract observations
+  - textblock3
   - /_shared/footer
