--- a/package.json
+++ b/package.json
@@ -31,12 +31,17 @@
 	"dependencies": {
 		"@gov.au/animate": "^0.1.3",
 		"@gov.au/body": "^0.1.1",
+		"@gov.au/breadcrumbs": "^0.2.0",
 		"@gov.au/footer": "^0.2.0",
 		"@gov.au/header": "^1.1.0",
+		"@gov.au/inpage-nav": "^0.2.0",
+		"@gov.au/link-list": "^0.2.0",
 		"@gov.au/pancake": "^1.1.0",
 		"@gov.au/pancake-js": "^1.0.9",
 		"@gov.au/pancake-sass": "^1.1.0",
-		"express": "^4.15.2"
+		"express": "^4.15.2",
+		"react": "^15.6.0",
+		"slugify": "^1.1.0"
 	},
 	"devDependencies": {
 		"autoprefixer": "^7.1.1",
