--- a/content/user-research/index.yml
+++ b/content/user-research/index.yml
@@ -1,6 +1,6 @@
 title: User research
 theme: light
 partials:
-  - /_shared/header
-  - intro
-  - /_shared/footer
+  - /_shared/header.md
+  - intro.md
+  - /_shared/footer.md
