--- a/content/user-research/planning-user-research/index.yml
+++ b/content/user-research/planning-user-research/index.yml
@@ -2,10 +2,10 @@ title: Planning user research
 layout: layout/topic
 theme: blue
 partials:
-  - /_shared/header
-  - intro             # Planning user research
-  - sections
-  - section1          # Meeting the Digital Service Standard
-  - textblock1
-  - textblock2
-  - /_shared/footer
+  - /_shared/header.md
+  - intro.md             # Planning user research
+  - sections.md
+  - section1.md          # Meeting the Digital Service Standard
+  - textblock1.md
+  - textblock2.md
+  - /_shared/footer.md
