--- a/content/content-strategy/content-auditing/engage-your-stakeholders/index.yml
+++ b/content/content-strategy/content-auditing/engage-your-stakeholders/index.yml
@@ -2,19 +2,19 @@ title: Engage your stakeholders
 layout: layout/topic
 theme: blue
 partials:
-  - /_shared/header
-  - intro             # Engage your stakeholders
-  - sections
-  - section1          # Get agreement
-  - textblock1
-  - section2          # Show the costs and inefficiencies
-  - textblock2
-  - section3          # Compare yours with similar government sites
-  - textblock3
-  - section4          # Get direct user feedback to build empathy with the users
-  - textblock4
-  - section5          # Get direct user feedback to build empathy with the users
-  - textblock5
-  - section6          # Get direct user feedback to build empathy with the users
-  - textblock6
-  - /_shared/footer
+  - /_shared/header.md
+  - intro.md             # Engage your stakeholders
+  - sections.md
+  - section1.md          # Get agreement
+  - textblock1.md
+  - section2.md          # Show the costs and inefficiencies
+  - textblock2.md
+  - section3.md          # Compare yours with similar government sites
+  - textblock3.md
+  - section4.md          # Get direct user feedback to build empathy with the users
+  - textblock4.md
+  - section5.md          # Get direct user feedback to build empathy with the users
+  - textblock5.md
+  - section6.md          # Get direct user feedback to build empathy with the users
+  - textblock6.md
+  - /_shared/footer.md
