--- a/content/content-strategy/content-auditing/index.yml
+++ b/content/content-strategy/content-auditing/index.yml
@@ -1,7 +1,7 @@
 title: Content auditing
 theme: light
 partials:
-  - /_shared/header
-  - intro
-  - /_shared/footer
-  
+  - /_shared/header.md
+  - intro.md
+  - /_shared/footer.md
+
