--- a/content/content-strategy/content-auditing/plan-your-audit/index.yml
+++ b/content/content-strategy/content-auditing/plan-your-audit/index.yml
@@ -2,17 +2,17 @@ title: Plan your audit
 layout: layout/topic
 theme: blue
 partials:
-  - /_shared/header
-  - intro             # Plan your audit
-  - sections
-  - section1          # Purpose of the website
-  - textblock1
-  - section2          # Articulate a goal
-  - textblock2
-  - section3          # Decide on scope and type of content audit
-  - textblock3
-  - section4          # Define your scope and prioritise
-  - textblock4
-  - section5          # Create a project plan
-  - textblock5
-  - /_shared/footer
+  - /_shared/header.md
+  - intro.md             # Plan your audit
+  - sections.md
+  - section1.md          # Purpose of the website
+  - textblock1.md
+  - section2.md          # Articulate a goal
+  - textblock2.md
+  - section3.md          # Decide on scope and type of content audit
+  - textblock3.md
+  - section4.md          # Define your scope and prioritise
+  - textblock4.md
+  - section5.md          # Create a project plan
+  - textblock5.md
+  - /_shared/footer.md
