--- a/content/homepage/index.yml
+++ b/content/homepage/index.yml
@@ -1,5 +1,5 @@
 title: Homepage
 partials:
-  - /_shared/header
-  - body
-  - /_shared/footer
+  - /_shared/header.md
+  - body.md
+  - /_shared/footer.md
