--- a/content/user-research/find-user-research-participants/index.yml
+++ b/content/user-research/find-user-research-participants/index.yml
@@ -2,11 +2,11 @@ title: Find user research participants
 layout: layout/topic
 theme: blue
 partials:
-  - /_shared/header
-  - intro             # Recruit current or potential future users of the service. 
-  - sections
-  - section1          # Remember to include stuff about pros and cons of pop up research
-  - textblock1
-  - section2
-  - textblock2
-  - /_shared/footer
+  - /_shared/header.md
+  - intro.md             # Recruit current or potential future users of the service.
+  - sections.md
+  - section1.md          # Remember to include stuff about pros and cons of pop up research
+  - textblock1.md
+  - section2.md
+  - textblock2.md
+  - /_shared/footer.md
