added sticky footer, fixed watch script
Signed-off-by: Dominik Wilkowski <Hi@Dominik-Wilkowski.com>

--- a/content/content-strategy/content-auditing/engage-your-stakeholders/index.yml
+++ b/content/content-strategy/content-auditing/engage-your-stakeholders/index.yml
@@ -1,7 +1,7 @@
 title: Engage your stakeholders
 layout: layout/topic
 theme: blue
-partials:
+main:
   - /_shared/header.md
   - intro.md             # Engage your stakeholders
   - sections.md
@@ -17,4 +17,5 @@ partials:
   - textblock5.md
   - section6.md          # Get direct user feedback to build empathy with the users
   - textblock6.md
+footer:
   - /_shared/footer.md
