--- a/content/content-strategy/content-auditing/plan-your-audit/index.yml
+++ b/content/content-strategy/content-auditing/plan-your-audit/index.yml
@@ -1,7 +1,7 @@
 title: Plan your audit
 layout: layout/topic
 theme: blue
-partials:
+main:
   - /_shared/header.md
   - intro.md             # Plan your audit
   - sections.md
@@ -15,4 +15,5 @@ partials:
   - textblock4.md
   - section5.md          # Create a project plan
   - textblock5.md
+footer:
   - /_shared/footer.md
