--- a/content/content-strategy/content-auditing/prove-the-value/index.yml
+++ b/content/content-strategy/content-auditing/prove-the-value/index.yml
@@ -1,7 +1,7 @@
 title: Prove the value
 layout: layout/topic
 theme: blue
-partials:
+main:
   - /_shared/header.md
   - intro.md             # Prove the value
   - sections.md
@@ -13,4 +13,5 @@ partials:
   - textblock3.md
   - section4.md          # Get direct user feedback to build empathy with the users
   - textblock4.md
+footer:
   - /_shared/footer.md
