--- a/content/user-research/find-user-research-participants/index.yml
+++ b/content/user-research/find-user-research-participants/index.yml
@@ -1,7 +1,7 @@
 title: Find user research participants
 layout: layout/topic
 theme: blue
-partials:
+main:
   - /_shared/header.md
   - intro.md             # Recruit current or potential future users of the service.
   - sections.md
@@ -9,4 +9,5 @@ partials:
   - textblock1.md
   - section2.md
   - textblock2.md
+footer:
   - /_shared/footer.md
