--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
 		"build:js": "mkdirp assets/js/ && concat-cli -f src/js/**/*.js -o assets/js/site.js",
 		"build": "npm-run-all --parallel build:*",
 		"watch:pages": "cuttlebelle -w",
-		"watch:css": "onchange 'src/sass/**/*.scss' -- npm run build:sass && npm run build:autoprefixer",
+		"watch:css": "onchange 'src/sass/**/*.scss' -- npm-run-all build:sass build:autoprefixer",
 		"watch:js": "onchange 'src/js/**/*.js' -- npm run build:js",
 		"watch": "npm-run-all --parallel watch:*",
 		"test": "echo \"Error: no test specified\" && exit 0"
