--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
 		"build:sass": "node-sass --output-style compressed -o assets/css src/sass/site.scss",
 		"build:autoprefixer": "postcss -u autoprefixer -r assets/css/*",
 		"build:js": "mkdirp assets/js/ && concat-cli -f src/js/**/*.js -o assets/js/site.js",
-		"build": "npm-run-all --parallel build:*",
+		"build": "npm-run-all build:sass build:autoprefixer build:js build:pages",
 		"watch:pages": "cuttlebelle -w",
 		"watch:css": "onchange 'src/sass/**/*.scss' -- npm-run-all build:sass build:autoprefixer",
 		"watch:js": "onchange 'src/js/**/*.js' -- npm run build:js",
