Update Find user reserch partcipants
- Updated content and added missing section
- Fixed up a few links and things

We still need to fix:
- H3s rendered as H2s error
- our pull quote rendering to use single quotation marks, as we have recommended in the content guide
- I’d love us to remove/reduce the line break inserted between in the intro stentence and the first bullet point in a list.

I’ll log the above as bugs separately.

--- a/content/user-research/find-user-research-participants/index.yml
+++ b/content/user-research/find-user-research-participants/index.yml
@@ -5,9 +5,15 @@ main:
   - /_shared/header.md
   - intro.md             # Recruit current or potential future users of the service.
   - sections.md
-  - section1.md          # Remember to include stuff about pros and cons of pop up research
-  - textblock1.md
-  - section2.md
-  - textblock2.md
+  - meeting-heading.md
+  - meeting.md
+  - finding-heading.md          # Remember to include stuff about pros and cons of pop up research
+  - finding.md
+  - brief-heading.md
+  - brief.md
+  - bias-heading.md
+  - bias.md
+  - case-heading.md
+  - case.md
 footer:
-  - /_shared/footer.md
+  - /_shared/footer-GDS.md
