Adds images to Analysing & fixes footer
- Just using 100% width on the images for now. We need to work out if we want to link to a bigger image or whatnot (need a content type for micro case studies).
- Hoping this also fixes missing GDS footer from the other pages.

--- a/content/user-research/how-changes/index.yml
+++ b/content/user-research/how-changes/index.yml
@@ -16,4 +16,4 @@ main:
   - live-head.md          # Researching your service once it's live
   - live.md
 footer:
-  - /_shared/footer-gds.md
+  - /_shared/footer-GDS.md
